format and style the axes

--- a/7_Line-Graph-project/styles.css
+++ b/7_Line-Graph-project/styles.css
@@ -21,3 +21,16 @@ button.active {
 form span {
   color: #00bfa5;
 }
+
+.x-axis path,
+.y-axis path,
+.x-axis line,
+.y-axis line {
+  stroke: #ccc;
+}
+
+.x-axis text,
+.y-axis text {
+  fill: #ccc;
+  font-size: 14px;
+}
